Atualizaçao do projeto e forma de exeutar