@@ -19,6 +19,7 @@
 
     <properties>
         <java.version>21</java.version>
+        <net.bytebuddy.experimental>true</net.bytebuddy.experimental>
     </properties>
 
     <dependencies>
@@ -170,6 +171,13 @@
                     <release>21</release>
                     <source>21</source>
                     <target>21</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
